--- a/app/Views/post/index.phtml
+++ b/app/Views/post/index.phtml
@@ -8,6 +8,8 @@
                 <td><?php echo $this->posts[$i]['id']; ?></td>
                 <td><?php echo $this->posts[$i]['title']; ?></td>
                 <td><?php echo $this->posts[$i]['post']; ?></td>
+                <td><a href="<?php echo BASE_URL . 'post/edit/' . $this->posts[$i]['id'];?>">Edituj</a></td>
+                <td><a href="<?php echo BASE_URL . 'post/delete/' . $this->posts[$i]['id'];?>">Smazat</a></td>
             </tr>
         <?php endfor; ?>
     </table>
